# voru

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cache.rs  cli.rs  cmdline.rs  commands.rs  config.rs  keys.rs  main.rs  player.rs  playlist.rs  server.rs  track.rs  traits.rs
src/view/: mod.rs  player.rs  playlists.rs  queue.rs
src/widget/: list.rs  mod.rs  player.rs  playlist.rs  progress.rs  track.rs  view.rs
