[package]
name = "voru"
description = "An ingenuous tui music player"
version = "0.1.0"
authors = ["bogdanov <bbogdan_ov@mail.ru>"]
readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/bbogdan-ov/voru"
keywords = ["music-player", "tui", "audio"]
categories = ["command-line-interface", "multimedia::audio"]

[dependencies]
lofty = "0.20.1"
rand = "0.8.5"
rodio = "0.19.0"
thiserror = "1.0.63"
toml = "0.8.15"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.tuich]
path = "../tuich"
default-features = false
features = [
	"backend-crossterm",
	"backend-crossterm-event",
	"serde",
	"text-stylized",
	"layout-stack",
	"widget-prompt"
]
