[package]
name = "voru"
description = "An ingenuous tui music player"
version = "0.1.0"
authors = ["bogdanov <bbogdan_ov@mail.ru>"]
readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/bbogdan-ov/voru"
keywords = ["music-player", "tui", "audio"]
categories = ["command-line-interface", "multimedia::audio"]

[dependencies]
crossterm = "0.28.1"
lofty = "0.20.1"
mpris-server = "0.8.1"
rand = "0.8.5"
rodio = "0.19.0"
thiserror = "1.0.63"
toml = "0.8.15"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes", "unstable"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.tuich]
git = "https://github.com/bbogdan-ov/tuich"
default-features = false
features = [
	"backend-crossterm",
	"backend-crossterm-event",
	"serde",
	"text-stylized",
	"layout-stack",
	"widget-prompt"
]
